chore: readme/makefile tweaks
Signed-off-by: Sam Gammon <sam@elide.dev>